Fixed typo in AFA tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,10 @@
     <div class="container-fluid">
 
       <a class="navbar-brand" href="#">Tags</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+ 
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!--ul class="navbar-nav me-auto mb-2 mb-lg-0"-->
@@ -200,8 +201,8 @@
       <center>
           <h1 style="color: DodgerBlue">PAFA</h1>
             <form action="/pafa" autocomplete="on" method = "POST" enctype="multipart/form-data">
-              First Module:<br> <input type="number" class="form-control name="first_module" ><br>
-              Last Module:<br> <input type="number" class="form-control name="last_module" ><br>
+              First Module:<br> <input type="number" class="form-control" name="first_module" ><br>
+              Last Module:<br> <input type="number" class="form-control" name="last_module" ><br>
               <button type="submit" style="background: blue; height: 45px; width: 200px; color: white; size: 5; font: oblique;">CREATE TAGS</button>
             </form>
           </body>
@@ -214,9 +215,9 @@
       <center>
           <h1 style="color: DodgerBlue">PkgAutoSys</h1>
             <form action="/pkgautosys" autocomplete="on" method = "POST" enctype="multipart/form-data">
-              First Module:<br> <input type="number" class="form-control name="first_module" ><br>
-              Last Module:<br> <input type="number" class="form-control name="last_module" ><br>
-              Line:<br> <input type="text" class="form-control name="line"><br>
+              First Module:<br> <input type="number" class="form-control" name="first_module" ><br>
+              Last Module:<br> <input type="number" class="form-control" name="last_module" ><br>
+              Line:<br> <input type="text" class="form-control" name="line"><br>
 
               <button type="submit" style="background: blue; height: 45px; width: 200px; color: white; size: 5; font: oblique;">CREATE TAGS</button>
             </form>
@@ -230,9 +231,9 @@
       <center>
           <h1 style="color: DodgerBlue">Rev Gates Tags</h1>
             <form action="/revgates" autocomplete="on" method = "POST" enctype="multipart/form-data">
-              First Gate:<br> <input type="number" class="form-control name="first_gate" ><br>
-              Last Gate:<br> <input type="number" class="form-control name="last_gate" ><br>
-              Line:<br> <input type="text" class="form-control name="line"><br>
+              First Gate:<br> <input type="number" class="form-control" name="first_gate" ><br>
+              Last Gate:<br> <input type="number" class="form-control" name="last_gate" ><br>
+              Line:<br> <input type="text" class="form-control" name="line"><br>
 
               <button type="submit" style="background: blue; height: 45px; width: 200px; color: white; size: 5; font: oblique;">CREATE TAGS</button>
             </form>
@@ -246,7 +247,7 @@
       <center>
           <h1 style="color: DodgerBlue">AFA Tags</h1>
             <form action="/afa" autocomplete="on" method = "POST" enctype="multipart/form-data">
-              Line:<br> <input type="text" class="form-control name="line"><br>
+              Line:<br> <input type="text" class="form-control" name="line"><br>
 
               <button type="submit" style="background: blue; height: 45px; width: 200px; color: white; size: 5; font: oblique;">CREATE TAGS</button>
             </form>
